2008-05-04  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Show an error dialog with an appropriate message when a file could
   not be saved.
 * THANKS, src/about.c:
   Update email address of Dormouse Young.


2008-04-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, tagmanager/lregex.c, tagmanager/include/regex.h,
   tagmanager/regex.c,tagmanager/include/Makefile.am,
   tagmanager/include/gnuregex.h, tagmanager/Makefile.am :
   Add configure option --enable-gnu-regex to implicitly build the
   included GNU regex library (in case the host system doesn't provide
   a usable regex library).
   Rename tagmanager/include/regex.h in tagmanager/include/gnuregex.h
   to avoid unintended inclusion in source files (this fixes the
   OpenSolaris crashes).
 * src/encodings.c:
   Don't use GNU regex specific regex_t::buffer element to build also
   without this extension (e.g. on OpenSolaris).
 * autogen.sh:
   Don't check for CVS directory as we don't use CVS anymore and remove
   non-portable -path option of find.
 * src/document.c:
   Fix crash when trying to change the encoding of a file
   (introduced in r2529).
 * src/keybindings.c:
   Allow Ctrl-A (or whatever "Select All" has been set to) to select
   all text in the scribble text widget (closes #1952335).


2008-04-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Refactor write_data_to_disk() and save_convert_to_encoding()
   from document_save_file().
   Include missing error string in error message when writing the
   file failed.
 * tagmanager/ctags.c:
   Set ExecutableName to "geany" to prevent possible crashes on
   Windows and maybe other systems.


2008-04-25  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/document.c:
   Add/reorder a recent file item when closing a document.
 * src/utils.c:
   Make utils_is_absolute_path() a NULL-safe version of
   g_path_is_absolute().

